# QA_RAG_LangChain

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
config/: __init__.py  embeddings.py  logger.py
core/: __init__.py  chunk.py  document_processor.py  embedding.py  rag_chain.py  vector_store.py
llm/: gemini.py
loaders/: pdf_loader.py
prompts/: prompts_templates.py
