[project]
name = "qa-rag-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "faiss-cpu>=1.10.0",
    "grandalf>=0.8",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.1",
    "loguru>=0.7.3",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "unstructured[pdf]>=0.17.2",
    "streamlit>=1.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
